@@ -1,7 +1,8 @@
 package com.yam.customer.member.domain;
 
+import java.io.Serializable;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -9,16 +10,25 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @RequiredArgsConstructor
 @Getter
-public class CustomUserDetails implements UserDetails {
+@Slf4j
+public class CustomUserDetails implements UserDetails, Serializable { // ✅ Serializable 추가
+
+	private static final long serialVersionUID = 1L; // ✅ 직렬화 버전 ID 추가
 
 	private final Member member;
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+		String role = member.getCustomerRole();
+		if (role == null || role.isEmpty()) {
+			role = "ROLE_USER"; // 기본값 설정
+		}
+		log.info("✅ 사용자 권한: {}", role);
+		return List.of(new SimpleGrantedAuthority(role));
 	}
 
 	@Override
@@ -33,21 +43,21 @@ public class CustomUserDetails implements UserDetails {
 
 	@Override
 	public boolean isAccountNonExpired() {
-		return true; // 계정 만료 여부 (true: 만료되지 않음)
+		return true;
 	}
 
 	@Override
 	public boolean isAccountNonLocked() {
-		return true; // 계정 잠금 여부 (true: 잠기지 않음)
+		return true;
 	}
 
 	@Override
 	public boolean isCredentialsNonExpired() {
-		return true; // 비밀번호 만료 여부 (true: 만료되지 않음)
+		return true;
 	}
 
 	@Override
 	public boolean isEnabled() {
-		return member.getCustomerApproval().equals("Y"); // 계정 활성화 여부
+		return "Y".equals(member.getCustomerApproval());
 	}
 }
